force-app/main/default/objects/MobileTelephonyObject__c/MobileTelephonyObject__c.object-meta.xml
<CustomObject>
    <label>Mobile Telephony Event</label>
    <nameField>
        <label>MobileTelephonyObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobile Telephony Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>