force-app/main/default/objects/MobileTelephonyObject__c/fields/DeviceModel__c.field-meta.xml
<CustomField>
    <fullName>DeviceModel__c</fullName>
    <label>DeviceModel</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>