force-app/main/default/objects/MobileTelephonyObject__c/fields/OsName__c.field-meta.xml
<CustomField>
    <fullName>OsName__c</fullName>
    <label>OsName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>