force-app/main/default/objects/MobileTelephonyObject__c/fields/OsVersion__c.field-meta.xml
<CustomField>
    <fullName>OsVersion__c</fullName>
    <label>OsVersion</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>