force-app/main/default/objects/MobileTelephonyObject__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Operation__c</columns>
    <columns>PhoneNumber__c</columns>
    <columns>DeviceIdentifier__c</columns>
    <columns>DeviceModel__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>UserId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>